@@ -1,3 +1,5 @@
+* Allow to have no Party Sequence
+
 Version 2.2.0 - 2011-10-24
 * Bug fixes (see mercurial logs for details)
 
